--- a/SwiftWeather/Base.lproj/Main.storyboard
+++ b/SwiftWeather/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="leN-ga-c5f">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                     <connections>
                         <segue destination="7K2-fE-KZ3" kind="show" identifier="showCityDetails" id="fMd-ye-DdW"/>
                     </connections>
